syntax = "proto3";

package say;

option optimize_for = SPEED;

service SayService {
    rpc SayHello (SayInput) returns (SayOutput) {
    }
}

message SayInput {
    string Id = 1; // id
    string Method = 2;
    string Name = 3;
    int32 NumRequests = 4;
    int32 NumFailures = 5;
    double MedianResponseTime = 6;
    string AvgResponseTime = 7;
    double MinResponseTime = 8;
    double MaxResponseTime = 9;
    double AvgContentLength = 10;
    int32 CurrentRps = 11;
}

message SayOutput {
    string code = 1;
    string msg = 2;
}
